name:                projecteuler-hs-jp
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/projecteuler-hs-jp#readme
license:             OtherLicense
license-file:        LICENSE
author:              yuto-matsum
maintainer:          yuto-matsum@users.noreply.github.com
copyright:           2016 yuto-matsum
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 001
  hs-source-dirs:      src
  main-is:             001.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 003
  hs-source-dirs:      src
  main-is:             003.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 023-step1
  hs-source-dirs:      src
  main-is:             023-step1.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 023-step2
  hs-source-dirs:      src
  main-is:             023-step2.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 023-step3
  hs-source-dirs:      src
  main-is:             023-step3.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 027
  hs-source-dirs:      src
  main-is:             027.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

executable 027-primes1
  hs-source-dirs:      src
  main-is:             027-primes1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unix

executable 032
  hs-source-dirs:      src
  main-is:             032.lhs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 038
  hs-source-dirs:      src
  main-is:             038.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 041-primes
  hs-source-dirs:      src
  main-is:             041-primes.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 041
  hs-source-dirs:      src
  main-is:             041.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 043
  hs-source-dirs:      src
  main-is:             043.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 044
  hs-source-dirs:      src
  main-is:             044.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 046
  hs-source-dirs:      src
  main-is:             046.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 047
  hs-source-dirs:      src
  main-is:             047.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 047-primeFactors
  hs-source-dirs:      src
  main-is:             047-primeFactors.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 049
  hs-source-dirs:      src
  main-is:             049.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 050
  hs-source-dirs:      src
  main-is:             050.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 051
  hs-source-dirs:      src
  main-is:             051.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, containers

executable 055
  hs-source-dirs:      src
  main-is:             055.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5

executable 057
  hs-source-dirs:      src
  main-is:             057.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
